Prevent ID column of Recent Transactions table from overflowing

--- a/src/assets/styles/components/dashboard/DashboardRecent.module.css
+++ b/src/assets/styles/components/dashboard/DashboardRecent.module.css
@@ -57,6 +57,11 @@
   font-size: 0.9rem;
 }
 
+.id {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .id a {
   font-weight: 600;
   color: var(--light-text-color);
